--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: portfoliosite
-description: "A new Flutter project."
+description: "My personal portfolio site built with Flutter"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -38,6 +38,10 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.2
 
+  flutter_web_plugins:
+    sdk: flutter
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,6 +67,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/profile.jpg
+    - assets/images/bodytherapy/icon.png
+    - assets/images/replee/icon.png
+    - assets/images/IVI/icon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
