--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
   flutter_web_plugins:
     sdk: flutter
+  google_fonts: ^6.2.1
 
 
 dev_dependencies:
@@ -70,6 +71,8 @@ flutter:
     - assets/images/bodytherapy/icon.png
     - assets/images/replee/icon.png
     - assets/images/IVI/icon.png
+    - assets/images/PortfolioSite/icon.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
