--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   google_fonts: ^6.2.1
+  dio: ^5.8.0+1
+  syncfusion_flutter_pdfviewer: ^30.1.42
 
 
 dev_dependencies:
@@ -72,6 +74,8 @@ flutter:
     - assets/images/replee/icon.png
     - assets/images/IVI/icon.png
     - assets/images/PortfolioSite/icon.png
+    - assets/pdfs/PrivacyPolicyBodyTherapy.pdf
+    
 
   #   - images/a_dot_ham.jpeg
 
